# Generative-Trading-Machine

./: .gitignore  README.md
lms/banis/: pyproject.toml  requirements-training.txt  requirements.txt
lms/banis/src/brainnet/: __init__.py
lms/banis/src/brainnet/agents/: __init__.py  base.py  coding.py  reasoning.py  research.py
lms/banis/src/brainnet/core/: config.py  memory.py
lms/banis/src/brainnet/services/: __init__.py  engine.py  gui.py  main.py  market_data.py  tui.py  web_gui.py
lms/banis/src/brainnet/training/: __init__.py  config.py  packer.py  train_deepseek.py
lms/banis/tests/: test_agents.py
lms/carter/: README.md  pyproject.toml  requirements-training.txt  requirements.txt
lms/carter/examples/: prepare_data_mac.py  train_quant_model.py
lms/carter/notebooks/: train_phi35_colab.py
lms/carter/src/brainnet/agents/: __init__.py  base.py  research.py
lms/carter/src/brainnet/core/: config.py
lms/carter/src/brainnet/services/: main.py  tui.py
lms/carter/src/brainnet/training/: config.py  dedup.py  filters.py  synthetic.py  train_phi35.py
lms/minah/: README.md  requirements.txt
lms/minah/src/brainnet/core/: __init__.py  config.py  memory.py  memory_milvus.py
lms/minah/src/brainnet/services/: __init__.py  coinglass.py  data_flywheel.py  engine.py  market_data.py
lms/minah/src/brainnet/training/: __init__.py  data_loader.py
scripts/: brain  carter
